--- a/example/ws-mqtt.html
+++ b/example/ws-mqtt.html
@@ -64,7 +64,7 @@
      * please refer to https://github.com/mqttjs/MQTT.js#mqttconnecturl-options
      */
     // const connectUrl = 'ws://broker.emqx.io:8083/mqtt'
-    const connectUrl = 'ws://localhost:8083/mqtt'
+    const connectUrl = 'ws://127.0.0.1:8083/mqtt'
 
     const options = {
       keepalive: 60,
